maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:33: error: not found: value dir
	if(isDirLibre(dir)){
                      ^